# ADAPT-FMP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ADAPT/CUF/: Any.h  Exception.h  Function.h  LinearAllocator.h  Macro.h  Math.h  Matrix.h  StaticAny.h  String.h  Switch.h  Template.h  Trivializer.h  Variant.h
ADAPT/FMP/: FastMathParser.h
ADAPT/FMP/Detail/: FMPExpression.h  FMPFunction.h  FMPLemon.h  FMPLemon_parser.c  FMPLemon_parser.h  FMPNode.h  FMPNode_base.h  FMPNode_func.h  FMPRe2c.h  FMPRe2c_impl.h
FMPGenerator/: CMakeLists.txt  Definition.py  FMPLemon_parser.y  FMPRe2c_impl_b.h  Generate.py  GenerateFuncImpl.py  GenerateLemonCode.py  GenerateNodeFunc.py
examples/: CMakeLists.txt  main.cpp
